2006-07-19  Edward Hervey  <edward@fluendo.com>

	* gnl/gnlcomposition.c: (gnl_composition_class_init),
	(hash_value_destroy), (gnl_composition_init), (get_stack_list),
	(update_start_stop_duration), (object_start_changed),
	(object_stop_changed), (object_priority_changed),
	(object_active_changed), (gnl_composition_add_object),
	(gnl_composition_remove_object):
	Add default sources properly (sources with prioriy of G_MAXUINT32).
	Update pipeline when:
	_ object is added/removed within current playing segment
	_ object within current playing segment whose start/stop/priority/active
	property changes.
	* tests/check/complex.c: (GST_START_TEST):
	* tests/check/gnlsource.c: (GST_START_TEST):
	Fixed tests to test more behaviours, including new ones.

2006-07-16  Edward Hervey  <edward@fluendo.com>

	* gnonlin.pc.in: removing file from CVS.
	* configure.ac: pre-release 0.10.4.3

2006-07-11  Edward Hervey  <edward@fluendo.com>

	* configure.ac:
	Require core >= 0.10.8.1 (for ghostpad and blocking fixes).
	* gnl/gnlcomposition.c: (hash_value_destroy), (unlock_childs),
	(gnl_composition_reset), (segment_done_main_thread),
	(get_new_seek_event), (handle_seek_event),
	(gnl_composition_ghost_pad_set_target),
	(gnl_composition_change_state), (no_more_pads_object_cb),
	(update_pipeline), (object_start_changed), (object_stop_changed),
	(object_priority_changed), (object_active_changed),
	(object_pad_added), (gnl_composition_add_object),
	(gnl_composition_remove_object):
	All source pads created are now blocked by default.
	Don't lock the state of sources in READY. Let them all reach paused.
	Remove cruft now fixed in GStreamer core.
	* gnl/gnlobject.c: (internalpad_event_function),
	(ghostpad_event_function), (control_internal_pad),
	(ghostpad_link_function), (gnl_object_ghost_pad_full),
	(gnl_object_ghost_pad_no_target),
	(gnl_object_ghost_pad_set_target):
	* gnl/gnlobject.h:
	Remove all the cruft which is now fixed in GStreamer core.