@@ -1,5 +1,11 @@
 2006-07-19  Edward Hervey  <edward@fluendo.com>
 
+	* gnl/gnlsource.c: (ghost_seek_pad):
+	Try to send pending event before emitting no-more-pads and unblocking
+	controlled src pad.
+
+2006-07-19  Edward Hervey  <edward@fluendo.com>
+
 	* gnl/gnlcomposition.c: (gnl_composition_class_init),
 	(hash_value_destroy), (gnl_composition_init), (get_stack_list),
 	(update_start_stop_duration), (object_start_changed),
